--- a/view/egresado/academico.html
+++ b/view/egresado/academico.html
@@ -8,19 +8,64 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="informacion">
-        <h1>informacion academica</h1>
-        <div class="titulo">
-            <h2>Titulos</h2>
-            <div>
-                <input type="text" name="" id="">
-                <button>Agregar</button>
-                <div>
-                    <h2>Fecha de finalizacion</h2>
-                    <input type="text" name="" id="">
+    <section class="container">
+            <section class="mainInfo">
+                <div class="informacion">
+                    <div class="recuadroh1">
+                        <h1>informacion academica</h1>
+                    </div>
+                    <div class="titulo">
+                        <h2>Titulos</h2>
+                        <div>
+                            <input type="text" name="" id="">
+                            <button>Agregar</button>
+                            <div class="fecha_finalizacion">
+                                <h2>Fecha de finalizacion</h2>
+                                <input type="text" name="" id="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
+            </section>
+            <section class="nivelAcademico">
+                <div class="informacion">
+                    <div class="titulo">
+                        <h2>Nivel academico</h2>
+                        <div>
+                            <input type="text" name="" id="">
+                            <button>Agregar</button>
+                            <div class="fecha_finalizacion">
+                                <h2>Fecha de finalizacion</h2>
+                                <input type="text" name="" id="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="certificados">
+                <div class="informacion">
+                    <div class="titulo">
+                        <h2>Titulos</h2>
+                        <div>
+                            <input type="text" name="" id="">
+                            <button>Agregar</button>
+                            <div class="fecha_finalizacion">
+                                <h2>Fecha de finalizacion</h2>
+                                <input type="text" name="" id="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="estudias">
+                <div>
+                    <h1>estudias actualmente</h1>
+                    <div class="botones_negacion">
+                        <button>Si</button>
+                        <button>No</button>
+                    </div>
+                </div>
+            </section>
+    </section>
 </body>
 </html>
