--- a/view/egresado/academico.html
+++ b/view/egresado/academico.html
@@ -9,63 +9,67 @@
 </head>
 <body>
     <section class="container">
-            <section class="mainInfo">
-                <div class="informacion">
+
+                <div class="tituloformacion">
                     <div class="recuadroh1">
                         <h1>informacion academica</h1>
-                    </div>
+                    </div>  
+                </div>
+
+                <div class="informacion">
+
+                   
+
                     <div class="titulo">
                         <h2>Titulos</h2>
                         <div>
-                            <input type="text" name="" id="">
+                            <input class="inputTexto"  type="text" name="" id="">
                             <button>Agregar</button>
                             <div class="fecha_finalizacion">
                                 <h2>Fecha de finalizacion</h2>
-                                <input type="text" name="" id="">
+                                <input class="inputFinal"type="date" id="start" name="trip-start" value="2018-07-22" min="2018-01-01" max="2018-12-31">
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="nivelAcademico">
+            
                 <div class="informacion">
                     <div class="titulo">
                         <h2>Nivel academico</h2>
                         <div>
-                            <input type="text" name="" id="">
+                            <input class="inputTexto" type="text" name="" id="">
                             <button>Agregar</button>
                             <div class="fecha_finalizacion">
                                 <h2>Fecha de finalizacion</h2>
-                                <input type="text" name="" id="">
+                                <input  class="inputFinal"type="date" id="start" name="trip-start" value="2018-07-22" min="2018-01-01" max="2018-12-31">
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="certificados">
+            
                 <div class="informacion">
                     <div class="titulo">
                         <h2>Titulos</h2>
                         <div>
-                            <input type="text" name="" id="">
+                            <input class="inputTexto" type="text" name="" id="">
                             <button>Agregar</button>
                             <div class="fecha_finalizacion">
                                 <h2>Fecha de finalizacion</h2>
-                                <input type="text" name="" id="">
+                                <input class="inputFinal"type="date" id="start" name="trip-start" value="2018-07-22" min="2018-01-01" max="2018-12-31">
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="estudias">
-                <div>
-                    <h1>estudias actualmente</h1>
+            
+            
+                <div class="estudio_actual">
+                    <h2>Estudias actualmente</h2>
                     <div class="botones_negacion">
                         <button>Si</button>
                         <button>No</button>
                     </div>
                 </div>
-            </section>
+            
     </section>
 </body>
 </html>
