correccion de nivel academico

--- a/view/egresado/academico.html
+++ b/view/egresado/academico.html
@@ -37,7 +37,15 @@
                     <div class="titulo">
                         <h2>Nivel academico</h2>
                         <div>
-                            <input class="inputTexto" type="text" name="" id="">
+                            
+                                <select name="color" id="color">
+                                    <option value="r">bachiller</option>
+                                    <option value="a">Tecnico</option>
+                                    <option value="v">pregrado</option>
+                                    <option value="c">prosgrado</option>
+                                    <option value="d">doctorado</option>
+                                  </select>
+                            
                             <button>Agregar</button>
                             <div class="fecha_finalizacion">
                                 <h2>Fecha de finalizacion</h2>
@@ -69,6 +77,9 @@
                         <button>No</button>
                     </div>
                 </div>
+            <div>
+                
+            </div>
             
     </section>
 </body>
