--- a/view/egresado/academico.html
+++ b/view/egresado/academico.html
@@ -17,18 +17,12 @@
                 </div>
 
                 <div class="informacion">
-
-                   
-
                     <div class="titulo">
                         <h2>Titulos</h2>
                         <div>
                             <input class="inputTexto"  type="text" name="" id="">
                             <button>Agregar</button>
-                            <div class="fecha_finalizacion">
-                                <h2>Fecha de finalizacion</h2>
-                                <input class="inputFinal"type="date" id="start" name="trip-start" value="2022-07-22" min="1980-01-01" max="2025-12-31">
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -47,17 +41,14 @@
                                   </select>
                             
                             <button>Agregar</button>
-                            <div class="fecha_finalizacion">
-                                <h2>Fecha de finalizacion</h2>
-                                <input  class="inputFinal"type="date" id="start" name="trip-start" value="2022-07-22" min="1080-01-01" max="2025-12-31">
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
             
                 <div class="informacion">
                     <div class="titulo">
-                        <h2>Titulos</h2>
+                        <h2>Certificados</h2>
                         <div>
                             <input class="inputTexto" type="text" name="" id="">
                             <button>Agregar</button>
